--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "ctrl-vpces"
 version = "0.1.0"
-authors = ["LOU Xun <xun.lou@controlant.com>", "GISLASON Olafur <olafur.gislason@controlant.com"]
+authors = [
+  "LOU Xun <xun.lou@controlant.com>",
+  "Olafur Gislason <olafur.gislason@controlant.com>",
+]
 description = "Allowed Principals controller for AWS VPC Endpoint Services"
 edition = "2021"
 
@@ -22,8 +25,8 @@ tokio = { version = "1", features = ["full"] }
 tokio-stream = "0.1"
 
 # AWS
+control-aws = { git = "https://github.com/controlant-org/control-aws.git", rev = "cb73371" }
 aws-types = "0.56"
 aws-config = "0.56"
-aws-sdk-ec2 = "0.30"
-aws-sdk-organizations = "0.30"
-aws-sdk-sts = "0.30"
+aws-sdk-ec2 = "0.31"
+aws-sdk-sts = "0.31"
