--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,14 +19,14 @@ clap = { version = "4", default-features = false, features = [
 ] }
 log = "0.4"
 env_logger = "0.10"
+fastrand = "2"
 
 # Runtime
 tokio = { version = "1", features = ["full"] }
-tokio-stream = "0.1"
 
 # AWS
-control-aws = { git = "https://github.com/controlant-org/control-aws.git", rev = "cb73371" }
-aws-types = "0.56"
-aws-config = "0.56"
-aws-sdk-ec2 = "0.31"
-aws-sdk-sts = "0.31"
+control-aws = { git = "https://github.com/controlant-org/control-aws.git", rev = "41f33f5" }
+aws-types = "1"
+aws-config = "1"
+aws-sdk-ec2 = "0.39"
+aws-sdk-sts = "0.39"
